browse active trips template